# CKANDex

./: .gitignore  Cargo.toml  README.md
ckandex/: Cargo.toml
ckandex/src/: cache.rs  error.rs  git.rs  lib.rs  query.rs  server.rs
ckandex/src/query/: builder.rs  filter.rs  filters.rs  mod.rs  query.rs  response.rs
ckandex/src/resolver/: avc.rs  common.rs  direct.rs  github.rs  gitlab.rs  jenkins.rs  kref.rs  mod.rs  netkan.rs  spacedock.rs
ckandex/src/schemas/: ckan.rs  frozen.rs  mod.rs  netkan.rs
ckandex/src/schemas/github/: author.rs  mod.rs  release.rs
ckandex/src/schemas/gitlab/: assets.rs  evidence.rs
example/: Cargo.toml
example/src/: main.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/rest-api/: Cargo.toml
examples/rest-api/src/: main.rs
lib/: Cargo.toml
lib/src/: all.rs  lib.rs  server.rs
lib/src/resolver/: avc.rs  common.rs  direct.rs  github.rs  gitlab.rs  id.rs  jenkins.rs  kref.rs  mod.rs  netkan.rs
lib/src/schemas/: mod.rs
lib/src/schemas/github/: asset.rs
lib/src/schemas/gitlab/: asset.rs  author.rs  commit.rs  mod.rs  namespace.rs  project.rs  release.rs
sample/: Cargo.toml
sample/src/: main.rs
src/: all.rs  git.rs  lib.rs  main.rs  server.rs
src/schemas/: frozen.rs  mod.rs  netkan.rs
