[package]
name = "ckandex"
version = "0.6.1"
edition = "2021"
license = "MIT"
authors = ["RedstoneWizard08"]
description = "An indexer and API for CKAN, written in Rust."
readme = "../README.md"
exclude = [".env"]
repository = "https://github.com/RedstoneWizard08/CKANDex"

[features]
server = ["dep:axum"]
default = []

[dependencies]
async-trait = "0.1.66"
axum = { version = "0.6.10", features = ["macros", "ws", "http2"], optional = true }
fancy-regex = "0.11.0"
git2 = "0.16.1"
jenkins_api = "0.8.0"
reqwest = { version = "0.11.14", features = ["json", "serde_json", "gzip"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_either = "0.2.1"
serde_json = "1.0.94"
serde_yaml = "0.9.19"

[package.metadata.docs.rs]
all-features = true
