[package]
name = "ckandex"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["RedstoneWizard08"]
description = "An indexer and API for CKAN, written in Rust."
readme = "../README.md"
exclude = [".env"]
repository = "https://github.com/RedstoneWizard08/CKANDex"

[features]
server = ["dep:axum", "dep:tokio"]
default = []

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros", "ws", "http2"], optional = true }
fancy-regex = "0.13.0"
git2 = { version = "0.19.0", features = ["vendored-openssl", "vendored-libgit2"] }
jenkins_api = "0.8.0"
reqwest = { version = "0.12.5", features = ["json", "stream", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_either = "0.2.1"
serde_json = "1.0.120"
serde_yml = "0.0.10"
sha256 = "1.5.0"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"], optional = true }

[package.metadata.docs.rs]
all-features = true
